Attempt to fix SDP dark mode logo issue.

--- a/assets/css/SDPStyling.css
+++ b/assets/css/SDPStyling.css
@@ -397,9 +397,9 @@ html {
         /* background: blue; */
         font-size: 8pt;
     }
-    .img-Logo {
+    /* .img-Logo {
         height: 20px;
-    }
+    } */
     .header-toptext-grey-section {
         min-height: 30px;
         padding: 5px 0px 5px 20px;
@@ -459,9 +459,9 @@ html {
         /* background: orange; */
         font-size: 8pt;
     }
-    .img-Logo {
+    /* .img-Logo {
         height: 20px;
-    }
+    } */
     .header-toptext-grey-section {
         min-height: 30px;
         padding: 5px 0px 5px 20px;
@@ -519,9 +519,9 @@ html {
         /* background: green; */
         font-size: 8pt;
     }
-    .img-Logo {
+    /* .img-Logo {
         height: 20px;
-    }
+    } */
     .header-toptext-grey-section {
         min-height: 30px;
         padding: 10px 0px 10px 30px;
